Add HelloWorld component and update index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import { HelloWorld } from "../components/HelloWorld";
 ---
 
 <html lang="en">
@@ -11,6 +11,10 @@
     <title>Astro</title>
   </head>
   <body>
-    <h1 class="text-red-500 text-9xl">Astro</h1>
+    <main class="m-3">
+      <h1 class="text-red-500 text-9xl">Astro</h1>
+
+      <HelloWorld name="Eduard" />
+    </main>
   </body>
 </html>
